# ddgplayer

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: adev.h  datarate.h  ffplayer.h  ffrender.h  pktqueue.h  recorder.h  stdefine.h  vdev.h  veffect.h
player-android/jni/: ddgplayer_jni.cc  ddgplayer_jni.h
src/: adev-android.cc  adev.c  datarate.c  ffplayer.c  ffrender.c  pktqueue.c  recorder.c  vdev-android.c  vdev-android.cc  vdev.c  veffect.c
tests/: test_parse_params.c  test_pktqueue.c
